<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <CheckBox
        android:id="@+id/checkDelhi"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:text="@string/delhi"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.398"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <TextView
        android:id="@+id/textViewUsernameLbl3"
        android:layout_width="112dp"
        android:layout_height="39dp"
        android:gravity="center_vertical"
        android:text="@string/dob"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.696" />

    <TextView
        android:id="@+id/textViewUsernameLbl2"
        android:layout_width="134dp"
        android:layout_height="49dp"
        android:gravity="center_vertical"
        android:text="@string/preferred_city"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="178dp"
        android:layout_height="128dp"
        android:background="#fff"
        android:contentDescription="@string/F"
        android:rotation="-360"
        android:src="@drawable/f"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText"
        tools:srcCompat="@drawable/f" />
    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="178dp"
        android:layout_height="128dp"
        android:background="#fff"
        android:contentDescription="@string/M"
        android:rotation="-360"
        android:src="@drawable/m"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText"
        tools:srcCompat="@drawable/m" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="178dp"
        android:layout_height="128dp"
        android:background="#fff"
        android:contentDescription="@string/O"
        android:rotation="-360"
        android:src="@drawable/u"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="HardcodedText"
        tools:srcCompat="@drawable/u" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="188dp"
        android:layout_height="132dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.991"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">
        <RadioButton
            android:id="@+id/radioBtn1"
            android:layout_width="194dp"
            android:layout_height="46dp"
            android:text="@string/_18_21"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="217dp"
            tools:layout_editor_absoluteY="240dp" />
        <RadioButton
            android:id="@+id/radioBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_22_30"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioBtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_30_50"
            android:textStyle="bold" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewUsernameLbl"
        android:layout_width="159dp"
        android:layout_height="52dp"
        android:gravity="center_vertical"
        android:text="@string/enter_username"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.245" />

    <TextView
        android:id="@+id/textViewAgeLbl"
        android:layout_width="99dp"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/age"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <EditText
        android:id="@+id/editTextUsername2"
        android:layout_width="192dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#989595"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.243" />

    <EditText
        android:id="@+id/date"
        android:layout_width="172dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/date"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="#989595"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <CheckBox
        android:id="@+id/checkBangalore"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:text="@string/bangalore"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <CheckBox
        android:id="@+id/checkChennai"
        android:layout_width="115dp"
        android:layout_height="45dp"
        android:text="@string/chennai"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.712"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <CheckBox
        android:id="@+id/checkMumbai"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:text="@string/mumbai"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />

    <TextView
        android:id="@+id/textViewSexLbl"
        android:layout_width="99dp"
        android:layout_height="45dp"
        android:gravity="center_vertical"
        android:text="@string/Gender"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.827" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="118dp"
        android:layout_height="46dp"
        android:text="@string/submit"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="102dp"
        android:layout_height="46dp"
        android:text="@string/reset"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.989" />

    <RadioGroup
        android:id="@+id/gGroup"
        android:layout_width="123dp"
        android:layout_height="125dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.912">

        <RadioButton
            android:id="@+id/gBtn1"
            android:layout_width="116dp"
            android:layout_height="30dp"
            android:text="@string/M"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/gBtn2"
            android:layout_width="117dp"
            android:layout_height="35dp"
            android:text="@string/F"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/gBtn3"
            android:layout_width="118dp"
            android:layout_height="41dp"
            android:text="@string/O"
            android:textStyle="bold" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>